# usrp_uhd_wrapper

./: .buildinfo  .bumpversion.cfg  .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  architecture.html  bi_boilerplate.cmake  genindex.html  index.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pytest.ini  requirements.txt  requirements_doc.txt  requirements_tests.txt  requirements_usrp.txt  requirements_usrp_frozen.txt  rpc-server.service  search.html  searchindex.js  setup.html  setup.py  start_usrp_server.bash  start_usrp_server.py  synchronisation.html  uhd_wrapper.html  uhd_wrapper.rpc_server.html  uhd_wrapper.utils.html  usrp_client.html
.doctrees/: architecture.doctree  environment.pickle  index.doctree  modules.doctree  setup.doctree  synchronisation.doctree  uhd_wrapper.doctree  uhd_wrapper.rpc_server.doctree  uhd_wrapper.utils.doctree  usrp_client.doctree
.github/workflows/: ci.yml
_sources/: setup.rst.txt  uhd_wrapper.rst.txt  uhd_wrapper.utils.rst.txt  usrp_client.rst.txt
debug/: CMakeLists.txt  tx_stream.cpp
docs/: ClangFormatDoc.md  Doxyfile  Makefile  README.md  architecture.rst  conf.py  index.rst  setup.rst  synchronisation.rst
docs/source/: Makefile  architecture.rst  conf.py  index.rst
examples/: eye_diagram.py  helpers.py  jcas.py  localhost_tranmission.py  mimo_p2p_transmission.py  ofdm.py  tkinter-example.py  usrp_p2p_transmission.py
hardware_tests/: mutli_device_sync.py  rect_localhost.py  send_signal_localhost.py  utils.py  zadoff_chu_localhost.py
hooks/: pre-commit
include/: config.hpp  usrp.hpp  usrp_exception.hpp  usrp_interface.hpp
include/pybinding/: usrp.hpp
lib/: CMakeLists.txt  config.cpp  config.hpp  pybinding_usrp.cpp  usrp.cpp  usrp_exception.cpp
lib/pybinding/: usrp.cpp
lib/usrp_pybinding/: usrp.cpp
rpc_server/: rpc_server.py
rpcserver/: rpc_server.py
server/: rpc_server.py
snippets/: CMakeLists.txt  usrp_snippet.cpp  usrp_snippet.py  utils.hpp
source/: uhd_wrapper.rst  usrp_client.rst
tests/: CMakeLists.txt  test_config.cpp  test_rpc_client.py  test_rpc_server.py  test_skeleton.cpp
tests/cpp/: test_config.cpp
tests/python/: test_rpc_server.py
uhd_wrapper/: CMakeLists.txt  README.md  __init__.py  versioning.py
uhd_wrapper/debug/: CMakeLists.txt  tx_stream.cpp
uhd_wrapper/hardware_tests/: mutli_device_sync.py  send_signal_localhost.py  transmit_chirp_localhost.py  utils.py
uhd_wrapper/include/: config.hpp  usrp.hpp  usrp_interface.hpp
uhd_wrapper/lib/: CMakeLists.txt  config.cpp  full_duplex_rfnoc_graph.cpp  full_duplex_rfnoc_graph.hpp  replay_config.cpp  replay_config.hpp  rf_configuration.cpp  rf_configuration.hpp  rfnoc_blocks.cpp  rfnoc_blocks.hpp  stream_mapper.cpp  stream_mapper.hpp  usrp.cpp  usrp.hpp
uhd_wrapper/lib/usrp_pybinding/: usrp.cpp
uhd_wrapper/rpc_server/: reconfigurable_usrp.py  rpc_server.py
uhd_wrapper/snippets/: usrp_snippet.cpp  usrp_snippet.py  utils.hpp
uhd_wrapper/tests/cpp/: CMakeLists.txt  catch_main.cpp  test_config.cpp  test_replay_config.cpp  test_stream_mapping.cpp
uhd_wrapper/tests/python/: test_annotated_usrp_exception.py  test_config.py  test_mimo_reconfiguring_usrp.py  test_reconfigurable_usrp.py  test_remote_usrp_error.py  test_restarting_usrp.py  test_rpc_server.py  test_usrp_pybinding.py  utils.py
uhd_wrapper/utils/: annotated_usrp_exception.py  config.py  remote_usrp_error.py  serialization.py
usrp-server/hardware_tests/: utils.py
usrp-server/lib/: CMakeLists.txt
usrp-server/lib/usrp_pybinding/: usrp.cpp
usrp-server/snippets/: utils.py
usrp_client/: __init__.py  errors.py  rpc_client.py  sanity.py  system.py
usrp_client/tests/: hardware_setups.py  test_errors.py  test_hardware_setups.py  test_remote_usrp_error.py  test_rpc_client.py  test_system.py
usrp_uhd_wrapper/tests/cpp/: CMakeLists.txt
usrp_uhd_wrapper/tests/python/: test_rpc_server.py
utils/: serialization.py
